--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>Depas MTY</title>
 </head>
 <body>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAXwDfdGmeraVw0pw0PuMG1NgZycRtDBc"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%"></script>
 
 
 <div id="root"></div>
